The jump-bug that occured when recording was stopped was caused by loading the new video item. The problem was addressed by giving the div encompassing the video an ID and setting a constant height.

--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,10 @@ div.submit {
 div.videoDiv {
   margin-bottom: 1em;
   margin-top: 1em;
-  height: 100%;
+}
+
+div#recorder {
+  height: 24em;
 }
 
 .video {
